--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://cdn.pixabay.com/photo/2017/12/10/10/09/moss-3009549_960_720.jpg);
+    background-image: url("background-img.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
