went back to update a few things and add links now that I have more in my portfolio

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("background-img.jpeg");
+    background-image: url("../images/mountain.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
