--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -75,7 +75,7 @@ figcaption {
 #socialIcons {
     background-color: rgba(255, 255, 255, 0.752);
     border: 5px solid white;
-    height: 415px;
+    height: 100%;
     margin-left: 1%;
 }
 
