--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -64,6 +64,8 @@ figcaption {
     background-color: rgba(253, 252, 252, 0.781);
     text-align: center;
     padding: 5px;
+    font-family: 'Unica One', cursive;
+
 }
 
 #mainContent {
@@ -80,10 +82,29 @@ figcaption {
 }
 
 .social-github2-dreamstale35 {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background-position: -366px -158px;
-    padding:10px;
+    padding:5px;
+    margin-bottom: 10px;
+}
+
+.social-linkedin-dreamstale45 {
+    width: 80px;
+    height: 80px;
+    background-position: -418px -210px;
+    padding: 5px;
+    margin-bottom: 10px;
+
+}
+
+.social-overflow-dreamstale53 {
+    width: 80px;
+    height: 80px;
+    background-position: -366px -262px;
+    padding: 5px;
+    margin-bottom: 10px;
+
 }
 
 .portfolioImages:hover, .social-github2-dreamstale35:hover, .social-linkedin-dreamstale45:hover, .social-overflow-dreamstale53:hover {
@@ -113,19 +134,6 @@ figcaption {
   }
 
 
-.social-linkedin-dreamstale45 {
-    width: 100px;
-    height: 100px;
-    background-position: -418px -210px;
-    padding: 10px;
-}
-
-.social-overflow-dreamstale53 {
-    width: 100px;
-    height: 100px;
-    background-position: -366px -262px;
-    padding: 10px;
-}
 
 .footer {
     background-color: white;
