--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -55,6 +55,7 @@ h2 {
 
 figure {
     padding: 0;
+    width: 250px;
 }
 
 figcaption {
@@ -69,7 +70,7 @@ figcaption {
 }
 
 #mainContent {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.664);
     text-align: justify;
     padding: 15px;
 }
