--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,11 @@ body {
     font-family: 'Oxygen', sans-serif;
 }
 
+.nav-link:hover {
+    color: #c34662;
+    font-weight: bold;
+}
+
 #navbar {
     height: 35px;
     font-size: 22px;
@@ -24,6 +29,7 @@ body {
 
 #navContent {
     float: right;
+    line-height: 70px;
 }
 
 .jumbotron {
@@ -40,23 +46,36 @@ h1 {
     font-family: 'Unica One', cursive;
     padding: 5px;
     font-size: 100px;
+    background-color: #ffffff40;
+    text-shadow: 4px 4px 4px #011423;
+    border: 5px solid white;
 }
 
 h2 {
     padding: 15px;
     text-align: center;
     font-family: 'Unica One', cursive;
-    background-color: #4d5c6f;
+    background-color: #011423;
     color: white;
 }
 
+#proh2 {
+    padding: 15px;
+    text-align: center;
+    font-family: 'Unica One', cursive;
+    background-color: #f8f9fa80;
+    /* color: white; */
+    border: 4px solid white;
+}
+
 #profilePic {
-    height: 200px;
+    height: 100px;
     border-radius: 1000px;
     position: relative;
-    top: -10px;
+    /* top: -10px; */
     z-index: 1;
-    border: 3px solid rgb(248, 246, 246);
+    /* border: 3px solid rgb(248, 246, 246); */
+    margin-right: 15px;
 }
 
 .portfolioImages {
@@ -87,9 +106,9 @@ figure {
 
 figcaption {
     position: relative;
-    top: -42px;
+    top: -29px;
     left: 34px;
-    background-color: rgba(77, 92, 111, 0.87);
+    background-color: rgba(1, 20, 35, 0.87);
     text-align: center;
     padding: 23px;
     font-family: 'Unica One', cursive;
@@ -144,7 +163,12 @@ form {
 }
 
 .footer {
-    width: 100%;
+    background-color: #252c33;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 3px;
+    padding: 3px;
+    color: white;
 }
 
 .portfolioImages:hover, .social-github2-dreamstale35:hover, .social-linkedin-dreamstale45:hover, .social-overflow-dreamstale53:hover {
