Update bg image, remove unused assets.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url('../images/bg.jpeg');
+    background-image: url('../images/eco_image.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
