--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,4 @@
 body {
-    /* background-image: url("../images/mountain.jpeg"); */
     background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
@@ -63,8 +62,6 @@ body {
     margin:30px;
 }
 
-
-
 li a {
     text-decoration: none;
     color:black;
@@ -83,7 +80,6 @@ h2 {
     text-align: center;
     font-family: 'Unica One', cursive;
     background-color: #f8f9fa80;
-    /* color: white; */
     border: 4px solid white;
 }
 
@@ -91,9 +87,7 @@ h2 {
     height: 100px;
     border-radius: 1000px;
     position: relative;
-    /* top: -10px; */
     z-index: 1;
-    /* border: 3px solid rgb(248, 246, 246); */
     margin-right: 15px;
 }
 
@@ -133,7 +127,7 @@ figure {
 }
 
 figcaption {
-    background-image: url('../images/bg2.jpeg');
+    background-image: url('../images/eco_image.jpeg');
     background-attachment: fixed;
     position: relative;
     top: -29px;
